feedback remove paddings in slider on mobile view, fix data display

--- a/src/assets/styles/containers/weather.scss
+++ b/src/assets/styles/containers/weather.scss
@@ -34,7 +34,10 @@ $max-weather-icon-height: 32px;
       bottom: $m-md;
       top: $m-md;
     };
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    justify-content: center;
     text-align: center !important;
 
     &__temperature {
@@ -73,9 +76,11 @@ $max-weather-icon-height: 32px;
     background: $color-white;
     box-sizing: border-box;
     color: $color-black !important;
-    flex-grow: 1;
-    padding: $m-md;
     width: 100%;
+    padding: {
+      bottom: $m-md;
+      top: $m-md;
+    };
     border: {
       top-left-radius:$border-radius-lg*1.5;
       top-right-radius:$border-radius-lg*1.5;
@@ -83,6 +88,10 @@ $max-weather-icon-height: 32px;
 
     &.-md {
       display: none;
+    }
+
+    .slick-dots {
+      position: static;
     }
   }
 
@@ -109,6 +118,10 @@ $max-weather-icon-height: 32px;
 
 .weather-next-week {
   text-align: center;
+  margin: {
+    left: $m-md;
+    right: $m-md;
+  };
 
   h1 {
     margin-top: 0;
@@ -124,11 +137,11 @@ $max-weather-icon-height: 32px;
 
   &__day {
     &__date {
+      width: 100%;
       color: $color-gray-dark;
     }
 
     &__icon {
-      width: 100%;
 
       img {
         margin: 0 auto;
@@ -136,9 +149,9 @@ $max-weather-icon-height: 32px;
       }
     }
 
-    &__min-temp {
+    &__max-temp {
       color: $color-gray-dark;
-      padding-left: $m-sm;
+      padding: 0 $m-sm;
     }
 
     &:nth-child(2n) {
@@ -149,6 +162,10 @@ $max-weather-icon-height: 32px;
 
 .weather-details {
   text-align: center;
+  margin: {
+    left: $m-md;
+    right: $m-md;
+  };
 
   h1 {
     margin-top: 0;
